hphp/hack/test/typecheck/xhp/xhp_xhp_name.php
<?hh // strict

class :xhpchildren {
  children (xhp)*;
}

class :foochildren {
  children (foo)*;
}

class :foobarchildren {
  children (foo:bar)*;
}

class :foobarchildrenagain {
  children (:foo:bar)*;
}
